<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitulo"
            style="@style/titlesStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/titulo_home"
            android:textAlignment="center"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/buttonRegistroConsumo"
            style="@style/buttonHomeMenuStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_registro_con" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            style="@style/buttonHomeMenuStyle"
            android:id="@+id/buttonConsejos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_consejos" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            style="@style/buttonHomeMenuStyle"
            android:id="@+id/buttonSeguimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_seguimiento" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            style="@style/buttonHomeMenuStyle"
            android:id="@+id/buttonInformacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_informacion" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>